# fintech-search

./: .env  .env.example  .gitignore  333104_code_index_query.json  AGENTS.md  README.md  TODO.md  build_all_indexes.py  build_indexes.py  build_remaining_indexes.py  build_table_index.py  check_file_size.py  check_index_info.py  check_index_issue.py  diagnose_build.py  find_function_by_id.py  get_table_detail.py  pre_log.md  pro_log.md  pyproject.toml  query_333002_results.json  test_build_index.sh  test_index_build.py
docs/: API.md  ARCHITECTURE.md  CALL_SEMANTICS.md  CHANGELOG.md  DEPLOYMENT.md  DEVELOPMENT_NOTES.md  EVALUATION.md  FRONTEND_DESIGN.md  FRONTEND_TECHNICAL.md  INDEX_BOUNDARIES.md  INDEX_SCHEMA.md  LOGGING.md  METADATA_INDEXING.md  NEWCOMER_GUIDE.md  QUICKSTART.md  RETRIEVAL_TUNING.md  SEMANTIC_RULES_EXTENSION.md  TECH_SELECTION.md  TROUBLESHOOTING.md  USAGE.md  WORKLOG.md  floatingPointNumberBaseConversion.md
eval/: uses_codes_cases.json  uses_codes_effect_cases.json
examples/: agent_code_answer_example.json  agent_code_db_summary.json  agent_code_evidence_example.json  agent_code_index_summary.json  agent_code_mc_publish_example.json  agent_code_summary.json  answer_333002.json  business_code_index_summary.json  business_code_metadata_index_summary.json  business_metadata_index_summary.json  business_table_index_summary.json  uses_codes_answer_example.json  uses_codes_call_chain_example.json  uses_codes_db_summary.json  uses_codes_dynamic_sql_example.json  uses_codes_embedding_e2e_report.json  uses_codes_embedding_medium_benchmark.json  (+17 more)
(+1352 files in other folders)
